--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,12 @@ prometheus-client==0.19.0
 joblib==1.3.2  # For saving/loading models and vectorizers
 python-dotenv==1.0.0  # For loading .env files
 
+# Testing and visualization
+pytest==7.4.3  # For unit testing
+matplotlib==3.8.2  # For confusion matrix visualization
+seaborn==0.13.0  # For confusion matrix heatmap styling
+
+# Streamlit dashboard
+streamlit==1.28.0  # For interactive dashboard
+plotly==5.17.0  # For interactive charts (optional, can use streamlit native charts)
+
