--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@
 # Install with: pip install -r requirements.txt
 
 # Core ML libraries
-scikit-learn==1.3.2
-pandas==2.1.3
-numpy==1.24.3
+scikit-learn>=1.4.0,<1.6.0  # Updated for Python 3.13 compatibility
+pandas>=2.1.3,<2.3.0
+numpy>=1.26.0,<2.0.0
 
 # MLflow for experiment tracking and model registry
 mlflow==2.8.1
