--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,33 @@
-# Python dependencies for MLOps Support Ticket Classifier
-# Install with: pip install -r requirements.txt
+# Python dependencies for MLOps Support Ticket Classifier Dashboard
+# Minimal dependencies for Streamlit Cloud deployment
 
-# Core ML libraries
-scikit-learn>=1.4.0,<1.6.0  # Updated for Python 3.13 compatibility
+# Dashboard dependencies (required)
+streamlit==1.28.0
+plotly==5.17.0
 pandas>=2.1.3,<2.3.0
-numpy>=1.26.0,<2.0.0
+
+# Optional: Uncomment below for local development with full ML pipeline
+# Core ML libraries
+# scikit-learn>=1.4.0,<1.6.0
+# numpy>=1.26.0,<2.0.0
 
 # MLflow for experiment tracking and model registry
-mlflow==2.8.1
+# mlflow==2.8.1
 
 # FastAPI and web server
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
+# fastapi==0.104.1
+# uvicorn[standard]==0.24.0
+# pydantic==2.5.0
 
 # Prometheus metrics instrumentation
-prometheus-fastapi-instrumentator==6.1.0
-prometheus-client==0.19.0
+# prometheus-fastapi-instrumentator==6.1.0
+# prometheus-client==0.19.0
 
 # Utilities
-joblib==1.3.2  # For saving/loading models and vectorizers
-python-dotenv==1.0.0  # For loading .env files
+# joblib==1.3.2
+# python-dotenv==1.0.0
 
 # Testing and visualization
-pytest==7.4.3  # For unit testing
-matplotlib==3.8.2  # For confusion matrix visualization
-seaborn==0.13.0  # For confusion matrix heatmap styling
-
-# Streamlit dashboard
-streamlit==1.28.0  # For interactive dashboard
-plotly==5.17.0  # For interactive charts (optional, can use streamlit native charts)
-
+# pytest==7.4.3
+# matplotlib==3.8.2
+# seaborn==0.13.0
