--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,30 @@
-# Python dependencies for MLOps Support Ticket Classifier Dashboard
-# Minimal dependencies for Streamlit Cloud deployment
+# Core
+numpy>=1.26,<2.0
+pandas>=2.1,<2.3
+scikit-learn>=1.4,<1.6
+joblib>=1.3,<1.5
 
-# Dashboard dependencies (required)
-streamlit==1.28.0
-plotly==5.17.0
-pandas>=2.1.3,<2.3.0
+# API
+fastapi>=0.110,<0.116
+uvicorn[standard]>=0.24,<0.31
+pydantic>=2.5,<2.10
+python-dotenv>=1.0,<1.1
 
-# Optional: Uncomment below for local development with full ML pipeline
-# Core ML libraries
-# scikit-learn>=1.4.0,<1.6.0
-# numpy>=1.26.0,<2.0.0
+# MLOps / Tracking
+mlflow>=2.8,<2.15
 
-# MLflow for experiment tracking and model registry
-# mlflow==2.8.1
+# Dashboard
+streamlit>=1.33,<2.0
+plotly>=5.17,<6.0
+pillow>=10.0,<11.0
 
-# FastAPI and web server
-# fastapi==0.104.1
-# uvicorn[standard]==0.24.0
-# pydantic==2.5.0
+# Monitoring (optional but common)
+prometheus-client>=0.19,<0.21
+prometheus-fastapi-instrumentator>=6.1,<7.0
 
-# Prometheus metrics instrumentation
-# prometheus-fastapi-instrumentator==6.1.0
-# prometheus-client==0.19.0
+# Testing
+pytest>=7.4,<9.0
 
-# Utilities
-# joblib==1.3.2
-# python-dotenv==1.0.0
-
-# Testing and visualization
-# pytest==7.4.3
-# matplotlib==3.8.2
-# seaborn==0.13.0
+# (Optional) data validation later
+# great-expectations>=0.18,<1.0
+# evidently>=0.4,<0.6
