--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 # Core
-numpy>=1.26,<2.0
+matplotlib>=3.8.0
+seaborn>=0.13.0
+numpy>=1.26.0,<2.0.0
 pandas>=2.1,<2.3
 scikit-learn>=1.4,<1.6
 joblib>=1.3,<1.5
